# SRCpp

./: .clang-tidy  CMakeLists.txt  CMakePresets.json  LATEST_RELEASE_NOTES.md  LICENSE  README.md
.github/workflows/: ci_automation.yml
cmake/: SRCppConfig.cmake.in  compiler.cmake  dependencies.cmake
docs/: API.md
examples/: CMakeLists.txt  SRCppExamples.cpp  test_SRCpp.cpp
include/SRCpp/: SRCpp.hpp
tests/: CMakeLists.txt  SRCppBuilds.cpp  SRCppTestCommon.cpp  SRCppTestConvert.cpp  SRCppTestPull.cpp  SRCppTestPullConvert.cpp  SRCppTestPush.cpp  SRCppTestPushConvert.cpp  SRCppTestResample.cpp  SRCppTestUtils.cpp  SRCppTestUtils.hpp  SRCppTests.cpp
